Add copy at click

--- a/src/index.html
+++ b/src/index.html
@@ -27,17 +27,17 @@
 
       <div class="card">
         <h2>HT</h2>
-        <span id="ht"></span>
+        <span id="ht" class="amount"></span>
       </div>
 
       <div class="card">
         <h2>TVA</h2>
-        <span id="tva"></span>
+        <span id="tva" class="amount"></span>
       </div>
 
       <div class="card">
         <h2>TTC</h2>
-        <span id="ttc"></span>
+        <span id="ttc" class="amount"></span>
       </div>
     </div>
   </body>
